create admin functionality(Category/Manager) CRUD

--- a/src/components/AdminDashboard/style.css
+++ b/src/components/AdminDashboard/style.css
@@ -1,7 +1,8 @@
 body{
-  background:#f4f4f4;
+  font-family: 'Baloo Da 2', cursive !important;
+  color: #424242 !important;
+  
 }
-
 /* Navbar */
 .navbar{
   min-height: 33px !important;
