--- a/src/components/CartComponent/CartManagment/cartStyles.css
+++ b/src/components/CartComponent/CartManagment/cartStyles.css
@@ -1,71 +1,52 @@
-.button {
-  align-self: center;
-    padding: 5px 5px;
-    font-size: 10px;
-    text-align: center;
-    cursor: pointer;
-    outline: none;
-    color: #fff;
-    background-color: #4CAF50;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 0 #999;
-  }
-  
-  .button:hover {background-color:  #ff9999}
-  
-  .button:active {
-    background-color: #ff3333;
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);
-  }
-
-  body {
-    font-family: 'Baloo Da 2', cursive !important;
-    color: #424242 !important;
-  }
-  
   .navbar-brand {
     font-size: 40px;
   }
-  
+
   .nav-link {
     font-size: 18px;
     margin-left: 20px;
   }
-  
+
   .logo-subhead {
     font-size: 25px;
   }
-  
+
   .main-container {
     margin-top: 80px;
     margin-bottom: 60px;
   }
-  
+
   .footer {
     height: 300px;
     background: #eeeeee;
   }
-  
+
   .footer ul {
     list-style: none;
   }
-  
+
   .footer ul li {
     padding-top: 10px;
   }
-  
+
   .footer i {
     cursor: pointer;
   }
-  
+
   .Copyright {
     margin-top: 40px;
     font-size: 18px;
   }
-  
+
   .cus-service li {
     cursor: pointer;
   }
-  
+
+  .main-container {
+    margin-top: 80px;
+    margin-bottom: 60px;
+  }
+
+  .sub-total {
+    font-size: 25px;
+  }
